# schaumburg-votes

./: .gitignore  LICENSE  MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
flaskr/: __init__.py  db.py
tests/: conftest.py  courses_data.csv  data.sql  real_courses.csv  real_data.sqlite  real_data2.sqlite  real_data_copy.sqlite  students_data.csv  students_pwd_data.csv  test_admin.py  test_admin_results_per_course.py  test_auth.py  test_course_calculation.py  test_db.py  test_factory.py  test_helpers.py  test_info.txt  test_models.py  test_vote.py
voting/: __init__.py  auth.py  cache.py  db.py  helpers.py  home.py  models.py  schema.sql  views.py  vote.py
voting/static/: courses.csv  styles.css
voting/templates/: admin_base.html  base.html  index.html
voting/templates/auth/: admin.html  login.html
voting/templates/views/: add_student.html  admin.html  courses.html  delete_student.html  index.html  vote.html  vote2.html  voted.html
voting/templates/views/admin/: add_student.html  calculate.html  calculated.html  choose_class.html  course-proposal.html  delete_student.html  get_results_per_course.html  show_results_per_class.html  show_results_per_course.html  students_by_class_delete.html
