[project]
name = "voting"
version = "1.1.0"
description = "A basic app that takes in votes from students and calculates the composition of courses regarding the votes"
dependencies = [
    "flask",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["voting"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["voting"]