[project]
name = "voting"
version = "1.2.4"
authors = [{name="Sven Schröder", email="schuen@gmx.de"},]
description = "A basic app that takes in votes from students and calculates the composition of courses regarding the votes"
dependencies = [
    "build==0.10.0",
    "cachelib==0.9.0",
    "click==8.1.3",
    "coverage==7.2.5",
    "Flask==2.2.2",
    "Flask-Caching==2.1.0",
    "freezegun==1.2.2",
    "iniconfig==2.0.0",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.2",
    "packaging==23.1",
    "pluggy==1.0.0",
    "pyproject_hooks==1.0.0",
    "pytest==7.3.1",
    "python-dateutil==2.8.2",
    "six==1.16.0",
    "Werkzeug==2.2.2",
    "WTForms==3.0.1",
]
readme = "README.md"

[project.optional-dependencies]
test = [
"pytest",
"freezegun",
]


[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "voting"

